Changed button style.

--- a/src/app/components/moods/edit/edit-mood-modal.html
+++ b/src/app/components/moods/edit/edit-mood-modal.html
@@ -29,5 +29,5 @@
   </button>
 
   <h3>Edit {{ editMood.rule.name }}</h3>
-  <button ng-click="editMood.remove()">Remove</button>
+  <button class="button" ng-click="editMood.remove()">Remove</button>
 </div>
