--- a/src/app/components/moods/add/new-mood-modal.html
+++ b/src/app/components/moods/add/new-mood-modal.html
@@ -27,113 +27,94 @@
   </svg>
 </button>
 
-<div style="position: fixed; left: 21px; top: 126px; width: 294px; height: 420px; border: 1px solid #eee; padding: 21px; overflow-y: scroll;">
+<!-- <div style="position: fixed; left: 21px; top: 126px; width: 294px; height: 420px; border: 1px solid #eee; padding: 21px; overflow-y: scroll;">
   <pre>{{ newMood.rule | json }}</pre>
-</div>
+</div> -->
 
 <div guh-wizard handle="newMood">
-  <!-- Select vendor -->
-  <!-- <div guh-wizard-step class="list" title="Select a thing">
-    <p class="item" ng-repeat="thing in newMood.things | orderBy: 'name' track by $index" ng-click="newMood.selectThing(thing)">
-      {{ thing.name }}
-      <svg class="icon">
-        <use xlink:href="./assets/svg/ui/ui.symbol.svg#chevron-right"></use>
-      </svg>
-    </p>
 
-    <button type="button" ng-click="newMood.save()">Save Rule</button>
-  </div> -->
+  <div guh-wizard-step>
+    <div guh-wizard handle="enterActions">
+      <!-- Select actions (enter) -->
+      <div guh-wizard-step title="What should this mood do when turned on?">
+        <div class="list" ng-if="thing.deviceClass.actionTypes.length > 0" ng-repeat="thing in newMood.things | orderBy: 'name' track by $index">
+          <h3 class="item-divider">
+            {{ thing.name }}
+            <span class="item-divider__description">{{ thing.deviceClass.vendor.name === thing.deviceClass.name || thing.deviceClass.name === thing.name ? thing.deviceClass.vendor.name : thing.deviceClass.vendor.name + ' &middot; ' + thing.deviceClass.name }}</span>
+          </h3>
 
-  <!-- Select thing -->
-  <div guh-wizard-step title="Select a thing">
-    <!-- <div class="list" ng-if="newMood.selectedThing.deviceClass.eventTypes.length > 0">
-      <h3 class="item-divider">Events</h3>
-      <p class="item" ng-repeat="eventType in newMood.selectedThing.deviceClass.eventTypes | orderBy: 'name' track by $index" ng-click="newMood.selectTrigger(eventType)">
-        {{ eventType.name }}
-        <svg class="icon">
-          <use xlink:href="./assets/svg/ui/ui.symbol.svg#chevron-right"></use>
-        </svg>
-      </p>
-    </div> -->
-
-    <!-- <div class="list" ng-if="newMood.selectedThing.deviceClass.stateTypes.length > 0">
-      <h3 class="item-divider">States</h3>
-      <p class="item" ng-repeat="stateType in newMood.selectedThing.deviceClass.stateTypesLinked | orderBy: 'name' track by $index" ng-click="newMood.selectTrigger(stateType)">
-        {{ stateType.name }}
-        <svg class="icon">
-          <use xlink:href="./assets/svg/ui/ui.symbol.svg#chevron-right"></use>
-        </svg>
-      </p>
-    </div> -->
-
-    <div class="list" ng-if="thing.deviceClass.actionTypes.length > 0" ng-repeat="thing in newMood.things | orderBy: 'name' track by $index">
-      <h3 class="item-divider">
-        {{ thing.name }}
-        <span class="item-divider__description">{{ thing.deviceClass.vendor.name === thing.deviceClass.name || thing.deviceClass.name === thing.name ? thing.deviceClass.vendor.name : thing.deviceClass.vendor.name + ' &middot; ' + thing.deviceClass.name }}</span>
-      </h3>
-
-      <p class="item" ng-repeat="actionType in thing.deviceClass.actionTypesLinked | orderBy: 'name' track by $index" ng-click="newMood.selectAction(thing, actionType)">
-        {{ actionType.name }}
-        <svg class="icon">
-          <use xlink:href="./assets/svg/ui/ui.symbol.svg#chevron-right"></use>
-        </svg>
-      </p>
-    </div>
-
-    <button type="button" ng-click="newMood.save()">Save Rule</button>
-  </div>
-
-  <!-- Select details -->
-  <div guh-wizard-step title="Set parameters">
-    <!-- ActionType -->
-    <guh-form ng-if="newMood.isActionType()"
-              name="setActionParams"
-              on-form-submit="newMood.selectActionDetails(params)"
-              class="list">
-
-      <guh-form-field label="{{ paramType.name }}"
-                      name="{{ paramType.name }}"
-                      param-type="paramType"
-                      template="{{ paramType.inputTemplateUrl }}"
-                      ng-repeat="paramType in newMood.selectedAction.paramTypes track by $index"
-                      class="item"></guh-form-field>
-
-      <button type="submit" class="full">Save action details</button>
-    </guh-form>
-
-    <!-- EventType -->
-    <guh-form ng-if="newMood.isEventType()"
-              name="setEventTypeParams"
-              on-form-submit="newMood.selectDetails(paramDescriptors)"
-              class="list">
-
-      <div ng-repeat="paramType in newMood.selectedTrigger.paramTypes track by $index">
-        <guh-form-field label=""
-                        name="{{ paramType.name }}"
-                        param-type="paramType"
-                        template="{{ paramType.inputTemplateUrl }}"
-                        value-operator="true"
-                        class="item"></guh-form-field>
+          <p class="item" ng-repeat="actionType in thing.deviceClass.actionTypesLinked | orderBy: 'name' track by $index" ng-click="newMood.selectEnterAction(thing, actionType)">
+            {{ actionType.name }}
+            <svg class="icon">
+              <use xlink:href="./assets/svg/ui/ui.symbol.svg#chevron-right"></use>
+            </svg>
+          </p>
+        </div>
       </div>
 
-      <button type="submit" class="full">Save trigger details</button>
-    </guh-form>
+      <!-- Select details -->
+      <div guh-wizard-step title="Set the parameters for the selected action.">
+        <!-- ActionType -->
+        <guh-form ng-if="newMood.isActionType()"
+                  name="setActionParams"
+                  on-form-submit="newMood.selectActionDetails(params)"
+                  class="list">
 
-    <!-- StateType -->
-    <guh-form ng-if="newMood.isStateType()"
-              name="setStateType"
-              on-form-submit="newMood.selectDetails(paramDescriptors)"
-              class="list">
+          <guh-form-field label="{{ paramType.name }}"
+                          name="{{ paramType.name }}"
+                          param-type="paramType"
+                          template="{{ paramType.inputTemplateUrl }}"
+                          ng-repeat="paramType in newMood.selectedAction.paramTypes track by $index"
+                          class="item"></guh-form-field>
 
-      <guh-form-field ng-if="newMood.selectedTrigger"
-                      label=""
-                      name="{{ newMood.selectedTrigger.name }}"
-                      state-type="newMood.selectedTrigger"
-                      template="{{ newMood.selectedTrigger.inputTemplateUrl }}"
-                      value-operator="true"
-                      class="item"></guh-form-field>
-
-      <button type="submit" class="full">Save trigger details</button>
-    </guh-form>
+          <button type="submit" class="full">Save action details</button>
+        </guh-form>
+      </div>
+    </div>
   </div>
+
+  <div guh-wizard-step>
+    <div guh-wizard handle="exitActions">
+      <!-- Select actions (exit) -->
+      <div guh-wizard-step title="What should this mood do when turned off?">
+        <div class="list" ng-if="thing.deviceClass.actionTypes.length > 0" ng-repeat="thing in newMood.things | orderBy: 'name' track by $index">
+          <h3 class="item-divider">
+            {{ thing.name }}
+            <span class="item-divider__description">{{ thing.deviceClass.vendor.name === thing.deviceClass.name || thing.deviceClass.name === thing.name ? thing.deviceClass.vendor.name : thing.deviceClass.vendor.name + ' &middot; ' + thing.deviceClass.name }}</span>
+          </h3>
+
+          <p class="item" ng-repeat="actionType in thing.deviceClass.actionTypesLinked | orderBy: 'name' track by $index" ng-click="newMood.selectExitAction(thing, actionType)">
+            {{ actionType.name }}
+            <svg class="icon">
+              <use xlink:href="./assets/svg/ui/ui.symbol.svg#chevron-right"></use>
+            </svg>
+          </p>
+        </div>
+      </div>
+
+      <!-- Select details -->
+      <div guh-wizard-step title="Set the parameters for the selected action.">
+        <!-- ActionType -->
+        <guh-form ng-if="newMood.isActionType()"
+                  name="setActionParams"
+                  on-form-submit="newMood.selectActionDetails(params)"
+                  class="list">
+
+          <guh-form-field label="{{ paramType.name }}"
+                          name="{{ paramType.name }}"
+                          param-type="paramType"
+                          template="{{ paramType.inputTemplateUrl }}"
+                          ng-repeat="paramType in newMood.selectedAction.paramTypes track by $index"
+                          class="item"></guh-form-field>
+
+          <button type="submit" class="full">Save action details</button>
+        </guh-form>
+      </div>
+    </div>
+  </div>
+
+  <div guh-wizard-step>
+    <button class="button" type="button" ng-click="newMood.save()">Save Rule</button>
+  </div>
+
 </div>
