Hotkeys now also possible when tabset headings begin with same character.

--- a/src/assets/scss/modules/_hotkeys.scss
+++ b/src/assets/scss/modules/_hotkeys.scss
@@ -23,6 +23,6 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-.hotkey::first-letter {
+.hotkey span {
   text-decoration: underline;
 }
