--- a/src/assets/scss/modules/_icon.scss
+++ b/src/assets/scss/modules/_icon.scss
@@ -34,3 +34,8 @@ $fill: $grey;
   fill: $fill;
   @include rem(width, 1.5);
 }
+
+.icon_inline {
+  display: inline-block;
+  @include rem(margin-bottom, -0.3);
+}
