--- a/src/app/components/moods/add/new-mood-modal.html
+++ b/src/app/components/moods/add/new-mood-modal.html
@@ -114,7 +114,7 @@
   </div>
 
   <div guh-wizard-step>
-    <button class="button" type="button" ng-click="newMood.save()">Save Rule</button>
+    <button class="button" type="button" ng-click="newMood.save()">Save Mood</button>
   </div>
 
 </div>
