--- a/src/app/components/moods/master/moods-master.html
+++ b/src/app/components/moods/master/moods-master.html
@@ -21,13 +21,18 @@
 -->
 
 
-<ul class="tiles" style="margin-top: 105px">
-  <!-- <li class="item" ng-repeat="mood in moods.configured | orderBy: 'name' track by $index"> -->
-  <li class="tile" ng-repeat="mood in moods.configured | orderBy: 'name' track by $index">
-    <a ui-sref="guh.moods.detail({ moodId: mood.id })">
-      <h2 class="content">Test {{ mood.name }}</h2>
-    </a>
-  </li>
-</ul>
+<guh-slider on-change="moods.setCurrent(slideIndex)">
+  <guh-slider-item ng-repeat="mood in moods.configured track by $index" index="$index">
+    <h2 class="heading">{{ mood.name === '' ? 'Mood' : mood.name }}</h2>
+    <p class="heading heading_sub">
+      <span ng-repeat="ruleAction in mood.actions track by $index">
+        <span ng-repeat="ruleActionParam in ruleAction.ruleActionParams track by $index">
+          {{ $parent.$index === 0 && $index === 0 ? '' : '&nbsp;&middot;' }}
+          {{ ruleActionParam.name }}
+        </span>
+      </span>
+    </p>
 
-<!-- <button type="button" class="button" guh-morphing-modal>Morphing Modal</button> -->
+    <div class="detail" ng-if="moods.currentSlide === $index" ui-view></div>
+  </guh-slider-item>
+</guh-slider>
