--- a/src/app/components/services/remove/remove-service-modal.html
+++ b/src/app/components/services/remove/remove-service-modal.html
@@ -27,16 +27,17 @@
   </svg>
 </button>
 
-<div guh-wizard handle="removeService" show-navigation="false">
+<!-- <div guh-wizard handle="removeService" show-navigation="false"> -->
+<div guh-wizard handle="removeService">
   <div guh-wizard-step title="Remove {{ remove.service.name }}">
     <p>{{ remove.service.name }} is managed by another service: <span>{{ remove.parentService.name }} ({{ remove.parentService.deviceClass.vendor.name === remove.parentService.deviceClass.name || remove.parentService.deviceClass.name === remove.parentService.name ? remove.parentService.deviceClass.vendor.name : remove.parentService.deviceClass.vendor.name + ', ' + remove.parentService.deviceClass.name }})</span></p>
 
     <p>To remove {{ remove.service.name ? remove.service.name : remove.service.deviceClass.name }}, {{ remove.parentService.name ? remove.parentService.name : remove.parentService.deviceClass.name }} has to be removed too.</p>
 
-    <p ng-if="remove.childServices.length > 1">Be aware when removing {{ remove.parentService.name }} all it's connected services are removed too:</p>
+    <p ng-if="remove.childServices.length > 1">Be aware when removing {{ remove.parentService.name ? remove.parentService.name : remove.parentService.deviceClass.name }} all it's connected services are removed too:</p>
     <p ng-if="remove.childServices.length > 1" ng-repeat="childService in remove.childServices | orderBy: 'name' track by $index">{{ childService.name }}</p>
 
-    <button class="button" ng-click="remove.removeAll()">Remove {{ remove.parentService.name }} and {{ remove.childServices.length > 1 ? remove.childServices.length + ' connected services' : remove.service.name }}</button>
+    <button class="button" ng-click="remove.removeAll()">Remove {{ remove.parentService.name ? remove.parentService.name : remove.parentService.deviceClass.name }} and {{ remove.childServices.length > 1 ? remove.childServices.length + ' connected services' : (remove.service.name ? remove.service.name : remove.service.deviceClass.name) }}</button>
   </div>
 
   <div guh-wizard-step title="Associated rules">
