--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -75,6 +75,7 @@
 @import "../assets/scss/modules/list";
 @import "../assets/scss/modules/loading";
 @import "../assets/scss/modules/overlay";
+@import "../assets/scss/modules/param";
 @import "../assets/scss/modules/state";
 @import "../assets/scss/modules/tile";
 
