--- a/src/app/components/devices/detail/device-class-templates/device-class-hue-bridge.html
+++ b/src/app/components/devices/detail/device-class-templates/device-class-hue-bridge.html
@@ -24,12 +24,27 @@
 <guh-tabset disabled="!device.statesObject.reachable.value">
   <!-- Actions -->
   <guh-tab heading="Control">
-    <p>This device doesn't have any controls.</p>
+    <p ng-if="device.actions.length === 0">This device doesn't have any controls.</p>
+    <guh-action device-id="{{ device.id }}" action-type-id="{{ action.actionType.id }}" ng-repeat="action in device.actions | orderBy: 'name' track by $index"></guh-action>
   </guh-tab>
 
   <!-- States -->
   <guh-tab heading="State">
-    <p>This device doesn't have a state to show you.</p>
+    <p ng-if="device.states.length === 0">This device doesn't have a state to show you.</p>
+    <div ng-switch="state.stateType.unit" ng-repeat="state in device.states track by $index" class="state">
+      <p class="name">{{ state.stateType.name }}</p>
+      <p class="value" ng-switch-when="UnitUnixTime">{{ state.value * 1000 | date: 'dd.MM.yyyy' }}, {{ state.value * 1000 | date: 'HH:mm' }}</p>
+      <p class="value" ng-switch-default>{{ state.value }} {{ state.stateType.unit | unit }}</p>
+    </div>
+  </guh-tab>
+
+  <!-- Settings -->
+  <guh-tab heading="Settigs">
+    <p ng-if="device.params.length === 0">This device doesn't have any settings to show you.</p>
+    <div ng-repeat="param in device.params track by $index" class="param">
+      <p class="name">{{ param.name }}</p>
+      <p class="value">{{ param.value }}</p>
+    </div>
   </guh-tab>
 </guh-tabset>
 
