--- a/src/app/components/devices/detail/device-class-templates/device-class-indoor-station.html
+++ b/src/app/components/devices/detail/device-class-templates/device-class-indoor-station.html
@@ -41,4 +41,13 @@
       <p class="value" ng-switch-default>{{ state.value }} {{ state.stateType.unit | unit }}</p>
     </div>
   </guh-tab>
+
+  <!-- Settings -->
+  <guh-tab heading="Settigs">
+    <p ng-if="device.params.length === 0">This device doesn't have any settings to show you.</p>
+    <div ng-repeat="param in device.params track by $index" class="param">
+      <p class="name">{{ param.name }}</p>
+      <p class="value">{{ param.value }}</p>
+    </div>
+  </guh-tab>
 </guh-tabset>
