--- a/src/app/components/services/detail/device-class-templates/template-not-available.html
+++ b/src/app/components/services/detail/device-class-templates/template-not-available.html
@@ -38,4 +38,13 @@
       <p class="value" ng-switch-default>{{ state.value }} {{ state.stateType.unit | unit }}</p>
     </div>
   </guh-tab>
+
+  <!-- Settings -->
+  <guh-tab heading="Settigs">
+    <p ng-if="service.params.length === 0">This service doesn't have any settings to show you.</p>
+    <div ng-repeat="param in service.params track by $index" class="param">
+      <p class="name">{{ param.name }}</p>
+      <p class="value">{{ param.value }}</p>
+    </div>
+  </guh-tab>
 </guh-tabset>
