--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -40,22 +40,24 @@ $color: $grey-dark;
 
 
 header.app {
-  position: fixed;
-    top: 0;
-  z-index: 10;
-  width: 100%;
+  // .content-wrapper {
+  //   margin: 0 auto;
+  //   overflow: auto;
+  //   width: 100%;
+  // }
 
-  .content-wrapper {
-    margin: 0 auto;
-    overflow: auto;
-    width: 40%;
-    width: 100%;
+  nav {
+    position: fixed;
+      left: 0;
+      top: 0;
+    z-index: 10;
   }
 
-  nav,
   .actions {
-    float: left;
-    width: 50%;
+    position: fixed;
+      right: 0;
+      top: 0;
+    z-index: 10;
   }
 
   ul {
