--- a/src/app/app.html
+++ b/src/app/app.html
@@ -24,7 +24,7 @@
 <!-- <div class="wrapper" ng-class="app.$state.current.controllerAs"> -->
 <div class="wrapper" ng-class="{ 'intro': app.$state.includes('guh.intro'), 'devices': app.$state.includes('guh.devices.master'), 'device': app.$state.includes('guh.devices.detail') }">
   <header class="app">
-    <div class="content-wrapper">
+    <!-- <div class="content-wrapper"> -->
       <nav>
         <ul>
           <li ng-class="{ active: app.$state.includes('guh.devices') }"><a ui-sref="guh.devices.master">Devices</a></li>
@@ -36,8 +36,13 @@
       <div class="actions">
         <guh-action-bar></guh-action-bar>
       </div>
-    </div>
+    <!-- </div> -->
   </header>
 
   <div ui-view class="content"></div>
 </div>
+
+
+<!-- <guh-morph template="<p>Morphing Content</p>"></guh-morph> -->
+
+<!-- <div class="detail"></div> -->
