Refactor and bugfixes.

--- a/src/app/shared/ui/form/form-field-templates/form-field-select.html
+++ b/src/app/shared/ui/form/form-field-templates/form-field-select.html
@@ -23,4 +23,4 @@
 
 <!-- <div>Create template for <strong>select</strong></div> -->
 <label>{{ formField.name }}</label>
-<select ng-model="formField.value" ng-options="value for value in formField.paramType.allowedValues"></select>
+<select ng-model="formField.value" ng-options="value for value in formField.selectOptions"></select>
